[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "throne"
version = "0.1.0"
description = "Cluster management tool for Forge/Monarch"
readme = "CLI_README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Allen Wang"},
]
dependencies = [
    # Throne depends on monarch for Jobs API
]

[project.scripts]
throne = "throne.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["throne*"]
